# nc-clap-cli

./: Cargo.toml
src/: command.rs  main.rs
